--- a/Heroedin/Base.lproj/Main.storyboard
+++ b/Heroedin/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -37,25 +38,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Detail view content goes here" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="0XM-y9-sOw">
-                                <rect key="frame" x="20" y="325" width="335" height="17"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" size="system"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d5T-S2-aIl">
+                                <rect key="frame" x="0.0" y="20" width="375" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="wZr-i6-n9D"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Gf-Ng-BtM">
+                                <rect key="frame" x="16" y="250" width="343" height="387"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="0XM-y9-sOw" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leading" constant="20" symbolic="YES" id="Tsc-yG-G1q"/>
-                            <constraint firstItem="0XM-y9-sOw" firstAttribute="centerY" secondItem="svH-Pt-448" secondAttribute="centerY" id="jWN-iV-94e"/>
-                            <constraint firstAttribute="trailing" secondItem="0XM-y9-sOw" secondAttribute="trailing" constant="20" symbolic="YES" id="tHV-ZD-HQj"/>
+                            <constraint firstItem="7Gf-Ng-BtM" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leadingMargin" id="FYZ-BO-m8l"/>
+                            <constraint firstItem="d5T-S2-aIl" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" id="Fn1-H6-NyM"/>
+                            <constraint firstItem="d5T-S2-aIl" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leading" id="SlN-Rs-X7M"/>
+                            <constraint firstItem="7Gf-Ng-BtM" firstAttribute="top" secondItem="d5T-S2-aIl" secondAttribute="bottom" constant="30" id="XSe-GT-gGz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7Gf-Ng-BtM" secondAttribute="trailing" id="YyZ-4U-weC"/>
+                            <constraint firstItem="GAO-Cl-Wes" firstAttribute="top" secondItem="7Gf-Ng-BtM" secondAttribute="bottom" constant="30" id="gXP-fQ-qdy"/>
+                            <constraint firstAttribute="trailing" secondItem="d5T-S2-aIl" secondAttribute="trailing" id="yBq-Xk-HXt"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
+                    <navigationItem key="navigationItem" title="Heroedin" id="mOI-FS-AaM"/>
                     <connections>
-                        <outlet property="detailDescriptionLabel" destination="0XM-y9-sOw" id="deQ-Na-JPF"/>
+                        <outlet property="detailDescriptionLabel" destination="7Gf-Ng-BtM" id="qib-BY-iVG"/>
+                        <outlet property="heroImage" destination="d5T-S2-aIl" id="bbD-Dh-lwU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
@@ -89,7 +100,7 @@
                                 <rect key="frame" x="0.0" y="22" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BpD-Di-RbY" id="g6U-FS-zbg">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="InS-Wp-5ex">
@@ -127,6 +138,7 @@
                                 <connections>
                                     <outlet property="heroImage" destination="InS-Wp-5ex" id="INl-dJ-E1A"/>
                                     <outlet property="heroName" destination="949-8V-Apy" id="rLW-Rh-eHl"/>
+                                    <segue destination="JEX-9P-axG" kind="showDetail" identifier="showDetail" id="9eb-fb-UB2"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -159,4 +171,7 @@
             <point key="canvasLocation" x="-45" y="129"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="9eb-fb-UB2"/>
+    </inferredMetricsTieBreakers>
 </document>
